Attempt to fix spacing in nav

--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,9 @@ header {
 .nav li {
   display: inline;
   text-align: center;
-  justify-content: space-around;
   padding: 0.4em;
   box-shadow: inset 0 0 0 0 #092;
   color: #092;
-  margin: 0 -.25rem;
-  padding: 0 .25rem;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
 }
 
